Thread Inspector -> Threads Inspector, unused import removed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2663 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/threadinspect/src/com/sun/tools/visualvm/modules/threadinspect/Bundle.properties
+++ b/plugins/threadinspect/src/com/sun/tools/visualvm/modules/threadinspect/Bundle.properties
@@ -24,6 +24,6 @@
 
 OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Long-Description=\
-    Thread Inspector adds a new section to the Threads tab showing stack traces for the selected live threads.
-OpenIDE-Module-Name=Thread Inspector
-OpenIDE-Module-Short-Description=Thread Inspector plugin for VisualVM
+    Threads Inspector adds a new section to the Threads tab showing stack traces for the selected live threads.
+OpenIDE-Module-Name=Threads Inspector
+OpenIDE-Module-Short-Description=Threads Inspector plugin for VisualVM
