further changes in dynamic tracer
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2664 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -16,6 +16,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.security}:\
     ${project.com.sun.tools.visualvm.modules.tracer.jvmstat}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.javase}:\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}
 project.com.sun.appserv.management=glassfish/amx-api
@@ -27,7 +28,8 @@ project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
 project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
-project.com.sun.tools.visualvm.modules.tracer.dynamic=tracer.dynamic
+project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
+project.com.sun.tools.visualvm.modules.tracer.javase=tracerjavase
 project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
