updating license and some module info
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2667 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
+++ b/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
@@ -1,4 +1,8 @@
+OpenIDE-Module-Display-Category=Tracer
+OpenIDE-Module-Long-Description=\
+    Java SE tracer probes based mostly on the platform MBeans
 OpenIDE-Module-Name=Tracer-JavaSE
+OpenIDE-Module-Short-Description=Java SE Tracer Probes
 VisualVM/Tracer/packages/platform_mx.js=Extra JVM Metrics
 VisualVM/Tracer/packages/platformMX=Extra JVM Metrics
 VisualVM/Tracer/packages/platformMX/probes/hotspot_compiler=HotSpot Compiler
