Tracer-JavaSE: more descriptions
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2684 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
+++ b/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
@@ -1,6 +1,8 @@
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    Java SE tracer probes based mostly on the platform MBeans
+    Tracer probes to monitor JVM internals: JIT Compiler, GC, NIO Buffers, Java I/O and AWT.\n\
+    <BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nJava I/O monitoring requires the Tracer-BTrace Support plugin to be installed.\n\
+    <BR>\nNIO Buffers monitoring requires the monitored application to run on JDK 7.
 OpenIDE-Module-Name=Tracer-JavaSE
 OpenIDE-Module-Short-Description=Java SE Tracer Probes
 VisualVM/Tracer/packages/platform_mx.js=Extra JVM Metrics
