Tracer-JavaSE: removed AWT probes, created Tracer-Swing module
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2687 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -18,7 +18,8 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
     ${project.com.sun.tools.visualvm.modules.tracer.javase}:\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
-    ${project.com.sun.tools.visualvm.modules.tracer.support}
+    ${project.com.sun.tools.visualvm.modules.tracer.support}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.swing}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
@@ -31,6 +32,7 @@ project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
 project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
 project.com.sun.tools.visualvm.modules.tracer.javase=tracerjavase
 project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
+project.com.sun.tools.visualvm.modules.tracer.swing=tracerswing
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.com.sun.tools.visualvm.modules.extensions=extensions
