--- a/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
+++ b/plugins/tracerjavase/src/com/sun/tools/visualvm/modules/tracer/javase/Bundle.properties
@@ -1,6 +1,6 @@
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    Tracer probes to monitor JVM internals: JIT Compiler, GC, NIO Buffers, Java I/O and AWT.\n\
+    Tracer probes to monitor JVM internals: JIT Compiler, GC, NIO Buffers and Java I/O.\n\
     <BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nJava I/O monitoring requires the Tracer-BTrace Support plugin to be installed.\n\
     <BR>\nNIO Buffers monitoring requires the monitored application to run on JDK 7.
 OpenIDE-Module-Name=Tracer-JavaSE
