--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -16,7 +16,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.security}:\
     ${project.com.sun.tools.visualvm.modules.tracer.jvmstat}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
-    ${project.com.sun.tools.visualvm.modules.tracer.javase}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.jvm}:\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}:\
     ${project.com.sun.tools.visualvm.modules.tracer.swing}
@@ -30,7 +30,7 @@ project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
 project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
-project.com.sun.tools.visualvm.modules.tracer.javase=tracerjavase
+project.com.sun.tools.visualvm.modules.tracer.jvm=tracerjvm
 project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
 project.com.sun.tools.visualvm.modules.tracer.swing=tracerswing
 project.net.java.visualvm.modules.glassfish=glassfish
