--- a/plugins/tracerjvm/src/com/sun/tools/visualvm/modules/tracer/jvm/Bundle.properties
+++ b/plugins/tracerjvm/src/com/sun/tools/visualvm/modules/tracer/jvm/Bundle.properties
@@ -3,8 +3,8 @@ OpenIDE-Module-Long-Description=\
     Tracer probes to monitor JVM internals: JIT Compiler, GC, NIO Buffers and Java I/O.\n\
     <BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nJava I/O monitoring requires the Tracer-BTrace Support plugin to be installed.\n\
     <BR>\nNIO Buffers monitoring requires the monitored application to run on JDK 7.
-OpenIDE-Module-Name=Tracer-JavaSE
-OpenIDE-Module-Short-Description=Java SE Tracer Probes
+OpenIDE-Module-Name=Tracer-JVM
+OpenIDE-Module-Short-Description=JVM Internals Tracer Probes
 VisualVM/Tracer/packages/platform_mx.js=Extra JVM Metrics
 VisualVM/Tracer/packages/platformMX=Extra JVM Metrics
 VisualVM/Tracer/packages/platformMX/probes/hotspot_compiler=HotSpot Compiler
