Probes: fixed JVM & Swing display name, added Technologies section to plugin description
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2700 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerjvmstat/src/com/sun/tools/visualvm/modules/tracer/jvmstat/Bundle.properties
+++ b/plugins/tracerjvmstat/src/com/sun/tools/visualvm/modules/tracer/jvmstat/Bundle.properties
@@ -24,7 +24,8 @@
 
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    A plugin to add Jvmstat counters as Tracer probes.
+    A plugin to add Jvmstat counters as Tracer probes.\n\
+    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJvmstat
 OpenIDE-Module-Name=Tracer-Jvmstat Probes
 OpenIDE-Module-Short-Description=Tracer Jvmstat probes
 
