--- a/plugins/tracermonitor/src/com/sun/tools/visualvm/modules/tracer/monitor/Bundle.properties
+++ b/plugins/tracermonitor/src/com/sun/tools/visualvm/modules/tracer/monitor/Bundle.properties
@@ -24,6 +24,7 @@
 
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    Set of Tracer probes providing the same metrics as the Monitor tab.
+    Set of Tracer probes providing the same metrics as the Monitor tab.\n\
+    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, Jvmstat
 OpenIDE-Module-Name=Tracer-Monitor Probes
 OpenIDE-Module-Short-Description=Monitor probes for Tracer
