Tracer-DTrace module added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2709 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -18,6 +18,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
     ${project.com.sun.tools.visualvm.modules.tracer.jvm}:\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.dtrace}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}:\
     ${project.com.sun.tools.visualvm.modules.tracer.swing}
 project.com.sun.appserv.management=glassfish/amx-api
@@ -29,6 +30,7 @@ project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
 project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
+project.com.sun.tools.visualvm.modules.tracer.dtrace=tracerdtrace
 project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
 project.com.sun.tools.visualvm.modules.tracer.jvm=tracerjvm
 project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
@@ -45,4 +47,4 @@ project.com.sun.tools.visualvm.modules.tracer.monitor=tracermonitor
 branding.token=visualvm
 branding.dir=none
 
-run.args.extra=-J-client -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
+run.args.extra=-J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
