Tracer-DTrace: added plugin descriptions, show in Plugin Center, improved probes descriptions
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2719 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerdtrace/src/com/sun/tools/visualvm/modules/tracer/dtrace/Bundle.properties
+++ b/plugins/tracerdtrace/src/com/sun/tools/visualvm/modules/tracer/dtrace/Bundle.properties
@@ -23,4 +23,8 @@
 # have any questions.
 
 OpenIDE-Module-Display-Category=Tracer
+OpenIDE-Module-Long-Description=\
+    A plugin to provide low level system metrics using the DTrace technology.\n\
+    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nDTrace\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nThis plugin currently supports only the Solaris and OpenSolaris OS.
 OpenIDE-Module-Name=Tracer-DTrace Probes
+OpenIDE-Module-Short-Description=Tracer DTrace Probes
