Application recognizers for Clojure and Groovy
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2723 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -73,3 +73,7 @@ LBL_Jruby=JRuby application
 DESCR_Jruby=JRuby application.
 LBL_Scala=Scala application
 DESCR_Scala=Scala application.
+LBL_Clojure=Clojure application
+DESCR_Clojure=Clojure application.
+LBL_Groovy=Groovy application
+DESCR_Groovy=Groovy application.
