Application recognizer for Jython
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2728 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -77,3 +77,5 @@ LBL_Clojure=Clojure application
 DESCR_Clojure=Clojure application.
 LBL_Groovy=Groovy application
 DESCR_Groovy=Groovy application.
+LBL_Jython=Jython application
+DESCR_Jython=Jython application.
