platform.properties clean-up
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2742 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/platform.properties
+++ b/plugins/nbproject/platform.properties
@@ -1,8 +1,8 @@
 # Deprecated since 5.0u1; for compatibility with 5.0:
 disabled.clusters=
 enabled.clusters=\
-    platform11,\
-    profiler3,\
+    platform,\
+    profiler,\
     visualvm
 nbjdk.active=default
 nbplatform.active=VisualVM_100609-dd12ae64a19c
