Tracer-JavaFX module added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2746 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -20,6 +20,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dtrace}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.javafx}:\
     ${project.com.sun.tools.visualvm.modules.tracer.swing}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
@@ -35,6 +36,7 @@ project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
 project.com.sun.tools.visualvm.modules.tracer.jvm=tracerjvm
 project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
 project.com.sun.tools.visualvm.modules.tracer.swing=tracerswing
+project.com.sun.tools.visualvm.modules.tracer.javafx=tracerjavafx
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.com.sun.tools.visualvm.modules.extensions=extensions
