Tracer-BTrace Support plugin means BTrace Deployer plugin, updated the requirements hints.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2751 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerjavafx/src/com/sun/tools/visualvm/modules/tracer/javafx/Bundle.properties
+++ b/plugins/tracerjavafx/src/com/sun/tools/visualvm/modules/tracer/javafx/Bundle.properties
@@ -25,7 +25,7 @@
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
     VisualVM-Tracer plugin providing various metrics for monitoring runtime behavior of a JavaFX application.\n\
-    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, BTrace\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nThis plugin requires the Tracer-BTrace Support plugin to be installed.
+    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, BTrace\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nThis plugin requires the BTrace Deployer plugin to be installed.
 OpenIDE-Module-Name=Tracer-JavaFX Probes
 OpenIDE-Module-Short-Description=JavaFX Metrics for Tracer
 VisualVM/Tracer/packages/jfx=JavaFX Metrics
