--- a/plugins/tracerjvm/src/com/sun/tools/visualvm/modules/tracer/jvm/Bundle.properties
+++ b/plugins/tracerjvm/src/com/sun/tools/visualvm/modules/tracer/jvm/Bundle.properties
@@ -1,7 +1,7 @@
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
     Tracer probes to monitor JVM internals: JIT Compiler, GC, NIO Buffers and Java I/O.\n\
-    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, BTrace (optional, see Requirements)\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nJava I/O monitoring requires the Tracer-BTrace Support plugin to be installed.\n\
+    <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, BTrace (optional, see Requirements)\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nJava I/O monitoring requires the BTrace Deployer plugin to be installed.\n\
     <BR>\nNIO Buffers monitoring requires the monitored application to run on JDK 7.
 OpenIDE-Module-Name=Tracer-JVM Probes
 OpenIDE-Module-Short-Description=JVM Internals Tracer Probes
