Skeleton of Tracer-Collections Probes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2773 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -21,7 +21,8 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracer.dtrace}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}:\
     ${project.com.sun.tools.visualvm.modules.tracer.javafx}:\
-    ${project.com.sun.tools.visualvm.modules.tracer.swing}
+    ${project.com.sun.tools.visualvm.modules.tracer.swing}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.collections}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
@@ -31,6 +32,7 @@ project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
 project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
+project.com.sun.tools.visualvm.modules.tracer.collections=tracercollect
 project.com.sun.tools.visualvm.modules.tracer.dtrace=tracerdtrace
 project.com.sun.tools.visualvm.modules.tracer.dynamic=tracerdynamic
 project.com.sun.tools.visualvm.modules.tracer.jvm=tracerjvm
