Tracer-Collections: progress
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2775 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracercollect/src/com/sun/tools/visualvm/modules/tracer/collections/Bundle.properties
+++ b/plugins/tracercollect/src/com/sun/tools/visualvm/modules/tracer/collections/Bundle.properties
@@ -24,7 +24,7 @@
 
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    Tracer probes to monitor the Java Collections frameworks.\n\
+    Tracer probes to monitor the Java Collections framework.\n\
     <BR>\n<BR>\n<B>Technologies:</B>\n<BR>\nJMX, BTrace\n<BR>\n<BR>\n<B>Requirements:</B>\n<BR>\nThis plugin requires the BTrace Deployer plugin to be installed.
 OpenIDE-Module-Name=Tracer-Collections Probes
 OpenIDE-Module-Short-Description=Collections Tracer Probes
