issue #402, java version and vendor added to overview
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2825 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
@@ -51,6 +51,10 @@ LBL_JVM=JVM
 
 LBL_Java_Home=Java Home
 
+LBL_Java_Version=Java Version
+
+LBL_Java_Vendor=Java Vendor
+
 LBL_JVM_Flags=JVM Flags
 
 LBL_Heap_dump_on_OOME=Heap dump on OOME
