Fixed Issue 403 - [I18N] Show/Hide section checkbox tooltip not from bundle  - affected tooltips are now defined in a bundle rather than hardcoded
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2826 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/ui/components/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/ui/components/Bundle.properties
@@ -25,6 +25,10 @@
 
 ToolTip_Hide=Hide
 
+ToolTip_ShowSection=Show {0}
+
+ToolTip_HideSection=Hide {0}
+
 MSG_application=application
 
 MSG_JVM=JVM
