use one line in Overview tab for java version and java vendor
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2835 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
@@ -51,9 +51,11 @@ LBL_JVM=JVM
 
 LBL_Java_Home=Java Home
 
-LBL_Java_Version=Java Version
+LBL_Java=Java
 
-LBL_Java_Vendor=Java Vendor
+LBL_Java_Version=version
+
+LBL_Java_Vendor=vendor
 
 LBL_JVM_Flags=JVM Flags
 
