additional fix for #402 - java version and vendor added also to the coredump overview
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2836 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/coredump/src/com/sun/tools/visualvm/coredump/impl/Bundle.properties
+++ b/visualvm/coredump/src/com/sun/tools/visualvm/coredump/impl/Bundle.properties
@@ -65,6 +65,12 @@ LBL_JVM=JVM
 
 LBL_Java_Home=Java Home
 
+LBL_Java=Java
+
+LBL_Java_Version=version
+
+LBL_Java_Vendor=vendor
+
 LBL_JVM_Flags=JVM Flags
 
 LBL_Inspecting_core_dump=Inspecting core dump
