Fixed #495 - Use 'Local Application' and 'Remote Application' instead of <Unknown Application>
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3047 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -26,7 +26,8 @@ OpenIDE-Module-Name=VisualVM-ApplicationType
 
 LBL_NbPlatformApplication=NetBeans Platform application
 
-LBL_Unknown_Application=<Unknown Application>
+LBL_Local_Application=Local Application
+LBL_Remote_Application=Remote Application
 
 LBL_Unknown_Version=<Unknown Version>
 
