issue #499, recognize Eclipse
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3053 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -44,6 +44,7 @@ DESCR_NetBeansBasedApplicationType=Java application built on top of the NetBeans
 DESCR_NetBeansApplicationType=NetBeans IDE: The only IDE you need! Runs on Windows, Linux, Mac OS X and Solaris. NetBeans IDE is open-source and free.
 DESCR_JDeveloperApplicationType=Oracle JDeveloper is a free integrated development environment that simplifies the development of Java-based SOA applications and user interfaces with support for the full development life cycle.
 DESCR_IntelliJPlatformApplicationType=The IntelliJ Platform is a platform for building smart, language-aware IDEs with a comprehensive set of components.
+DESCR_EclipseApplicationType=Eclipse is an open-source community that develops open platforms and products.
 DESCR_MavenApplicationType=Apache Maven is a software project management and comprehension tool. Based on the concept of a project object model (POM), Maven can manage a project's build, reporting and documentation from a central piece of information.
 DESCR_Ant=Apache Ant is a Java-based build tool. In theory, it is kind of like Make, but without Make's wrinkles.
 DESCR_GlassFish=GlassFish is an open source application server for the Java EE platform.
