--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle.properties
@@ -52,7 +52,7 @@ LBL_Link7=Getting Started Extending VisualVM
 URL_Link7=http://visualvm.java.net/api-quickstart.html
 
 LBL_Link8=Monitoring and Managing Java SE 6
-URL_Link8=http://java.sun.com/developer/technicalArticles/J2SE/monitoring/
+URL_Link8=http://www.oracle.com/technetwork/articles/javase/monitoring-141801.html
 
 
 URL_OracleLogo=http://www.oracle.com
