--- a/visualvm/launcher/visualvm.conf
+++ b/visualvm/launcher/visualvm.conf
@@ -22,17 +22,56 @@
 # or visit www.oracle.com if you need additional information or have any
 # questions.
 
-# ${HOME} will be replaced by user home directory according to platform
-default_userdir="${HOME}/.${APPNAME}/dev"
-default_mac_userdir="${HOME}/Library/Application Support/${APPNAME}/dev"
+# Default locations of userdir and cachedir:
+#
+# On Windows ${DEFAULT_USERDIR_ROOT} will be replaced by the launcher
+# with "<AppData>\VisualVM" where <AppData> is user's
+# value of "AppData" key in Windows Registry under
+# "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders"
+# and ${DEFAULT_CACHEDIR_ROOT} will be replaced by the launcher
+# with "<Local AppData>\VisualVM\Cache" where <Local AppData> is user's
+# value of "Local AppData" key in Windows Registry under
+# "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders"
+#
+# On Mac ${DEFAULT_USERDIR_ROOT} will be replaced by the launcher
+# with "~/Library/Application Support/VisualVM" and
+# ${DEFAULT_CACHEDIR_ROOT} with "~/Library/Caches/VisualVM"
+#
+# On other systems ${DEFAULT_USERDIR_ROOT} will be replaced by the launcher
+# with "~/.visualvm" and ${DEFAULT_CACHEDIR_ROOT} with "~/.cache/visualvm"
+#
+# You can also use ${HOME} variable which will be replaced with
+# user.home JVM system property value. This variable is valid only in
+# visualvm_default_userdir and visualvm_default_cachedir properties.
+#
+# NOTE: If you specify a non-default userdir path on command line
+# (--userdir option) and don't specify a cachedir path (--cachedir option),
+# cachedir will be in "<userdir>/var/cache".
+#
+# Cachedir must be different from userdir. The same cachedir and userdir
+# would cause problems.
+#
+visualvm_default_userdir="${DEFAULT_USERDIR_ROOT}/dev"
+visualvm_default_cachedir="${DEFAULT_CACHEDIR_ROOT}/dev"
 
-# options used by the launcher by default, can be overridden by explicit
-# command line switches
-default_options="-J-client -J-Xms24m -J-Xmx256m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense -J-Dsun.jvmstat.perdata.syncWaitMs=10000 -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false -J-Dnetbeans.logger.console=true -J-ea"
+# Options used by VisualVM launcher by default:
+# (can be overridden by explicit command line switches)
+#
+
+visualvm_default_options="-J-client -J-Xms24m -J-Xmx256m -J-XX:MaxPermSize=96m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense -J-Dsun.jvmstat.perdata.syncWaitMs=10000 -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false -J-Dnetbeans.logger.console=true -J-ea"
 # for development purposes you may wish to append: -J-Dnetbeans.logger.console=true -J-ea
 
-# default location of JDK/JRE, can be overridden by using --jdkhome <dir> switch
-#jdkhome="/path/to/jdk"
+# Default location of JDK:
+#
+# It can be overridden on command line by using --jdkhome <dir>
+# Be careful when changing jdkhome.
+# There are two VisualVM launchers for Windows (32-bit and 64-bit) and
+# installer points to one of those in the VisualVM application shortcut 
+# based on the Java version selected at installation time.
+#
+#visualvm_jdkhome="/path/to/jdk"
 
-# clusters' paths separated by path.separator (semicolon on Windows, colon on Unices)
-#extra_clusters=
+# Additional module clusters:
+# using ${path.separator} (';' on Windows or ':' on Unix):
+#
+#visualvm_extraclusters="/absolute/path/to/cluster1:/absolute/path/to/cluster2"
