issue #552, The tab titiled "PermGen" should be changed to "Metaspace" when monitoring JDK8
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3209 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
+++ b/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
@@ -26,3 +26,6 @@ OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Name=VisualVM-JVM
 
 MSG_ThreadDumpfailed=Take Thread Dump failed
+LBL_Heap=Heap
+LBL_NA=N/A
+LBL_Perm=Perm
