Bugfix #415 - ask the user whether to keep/remove unresolved JMX connections on VisualVM startup.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3217 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -38,6 +38,10 @@ LBL_Password=&Password\:
 
 LBL_OK=OK
 
+Title_Unresolved_JMX=Could Not Resolve JMX Connections
+
+MSG_Unresolved_JMX=<html><b>These JMX connections could not be resolved:</b><br>Do you want to resolve them on next VisualVM session?<br><br></html>
+
 MSG_Invalid_JMX_connection=Invalid JMX connection\: {0}
 
 MSG_Cannot_resolve_host=Cannot resolve host\: {0}
