Initial calibration dialog now uses the StartupDialog support, improved dialog caption
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3221 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -88,7 +88,8 @@ MSG_Profiler_Snapshot=Pro&filer Snapshot
 
 DESCR_Profiler_Snapshot=Profiler Snapshot
 
-MSG_Calibration=<html><b>Calibration will be performed.</b><br><br>Profiler will perform initial JDK calibration. Please make sure that other applications<br>are not placing a noticeable load on your machine at this time and click the OK button.</html>
+CAPTION_Calibration=VisualVM Calibration
+MSG_Calibration=<html><b>Calibration will be performed.</b><br><br>Profiler will perform initial JDK calibration. Please make sure that other applications<br>are not placing a noticeable load on your machine at this time and click the OK button.<br><br></html>
 
 LBL_Settings=Settings
 
