The best to address #153 - VisualVM offers to restart itself after resetting calibration data to re-calibrate the profiler immediately.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3222 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
+++ b/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
@@ -141,3 +141,6 @@ TOOLTIP_Sampling_refresh=Sampling frequency and results refresh rate [ms]
 TOOLTIP_Defined_presets=Defined presets
 
 TOOLTIP_Manage_presets=Create or manage presets
+
+CAPTION_DeletedRestart=Calibration Data Reset
+MSG_DeletedRestart=<html><b>Restart VisualVM?</b><br><br>Calibration data successfully reset. Do you want to restart<br>VisualVM now to perform a new calibration?</html>
