bugfix #563, notify user that 'Perform GC' failed and disable it
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3223 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
@@ -45,6 +45,8 @@ LBL_Threads=Threads
 
 LBL_Perform_GC=Perform GC
 
+TXT_Perform_GC_failed=Perform GC action failed.\n{0}
+
 LBL_Heap_Dump=Heap Dump
 
 # HTML-formatted: Uptime: 11:20 AM
