visualvm.java.net and netbeans.org websites now use https as default
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3226 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle.properties
@@ -31,25 +31,25 @@ ACD_ShowOnStartup=Checkbox to show or hide the Welcome Screen on next NetBeans s
 
 
 LBL_Link1=VisualVM Home
-URL_Link1=http://visualvm.java.net
+URL_Link1=https://visualvm.java.net
 
 LBL_Link2=Java SE Reference at a Glance
 URL_Link2=http://www.oracle.com/technetwork/java/javase/documentation/index.html
 
 LBL_Link3=Getting Started with VisualVM
-URL_Link3=http://visualvm.java.net/gettingstarted.html
+URL_Link3=https://visualvm.java.net/gettingstarted.html
 
 LBL_Link4=Troubleshooting Guide for Java SE 6
 URL_Link4=http://www.oracle.com/technetwork/java/javase/index-138283.html
 
 LBL_Link5=VisualVM Troubleshooting Guide
-URL_Link5=http://visualvm.java.net/troubleshooting.html
+URL_Link5=https://visualvm.java.net/troubleshooting.html
 
 LBL_Link6=Troubleshooting Java\u2122 2 SE 5.0
 URL_Link6=http://www.oracle.com/technetwork/java/javase/troubleshooting-j2se5-136728.html
 
 LBL_Link7=Getting Started Extending VisualVM
-URL_Link7=http://visualvm.java.net/api-quickstart.html
+URL_Link7=https://visualvm.java.net/api-quickstart.html
 
 LBL_Link8=Monitoring and Managing Java SE 6
 URL_Link8=http://www.oracle.com/technetwork/articles/javase/monitoring-141801.html
