--- a/visualvm/startup/nbproject/project.properties
+++ b/visualvm/startup/nbproject/project.properties
@@ -27,5 +27,5 @@ license.file=src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
 module.jar.dir=core
 
 license.file=../startup/src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
-nbm.homepage=http://visualvm.java.net
+nbm.homepage=https://visualvm.java.net
 
