Filter name hints in Sampler unified with hints in Profiler
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3229 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
@@ -64,7 +64,7 @@ COL_ABytes_Sec=Thread CPU Time [ms]/sec
 
 LBL_Threads=<b>Threads: </b>{0}
 
-LBL_Thread_filter=[Thread Name Filter]
+LBL_Thread_filter=Thread Name Filter
 
 LBL_CPUTime=<b>Total CPU Time [ms]: </b>{0}
 
