--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/memory/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/memory/Bundle.properties
@@ -66,9 +66,9 @@ LBL_HeapDump=Heap Dump
 
 TOOLTIP_HeapDump=Take heap dump
 
-LBL_Class_filter=[Class Name Filter]
+LBL_Class_filter=Class Name Filter
 
-LBL_Thread_filter=[Thread Name Filter]
+LBL_Thread_filter=Thread Name Filter
 
 LBL_Classes=<b>Classes: </b>{0}
 
