--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -60,3 +60,8 @@ DESCR_JmxConnection=JMX connection setup
 LBL_ConnectionProperties=Connection
 DESCR_ConnectionProperties=Connection used to discover and manage the application
 MSG_ConnectionProperties=The application is managed by a JMX connection. See the JMX Connection tab for details.
+
+Title_Insecure_SSL=Secure connection failed. Retry insecurely?
+MSG_Insecure_SSL=<html><b>The connection to {0}<br>could not be made using SSL.</b><br><br>\
+                 Would you like to try it without SSL?<br>\
+                 (Username and password will be sent in plain text)<html>
