rename Perm to PermGen and 'Used Heap' to 'Used heap' (to be consistent with VisualVM 1.3.5)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3246 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
+++ b/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
@@ -28,5 +28,5 @@ OpenIDE-Module-Name=VisualVM-JVM
 MSG_ThreadDumpfailed=Take Thread Dump failed
 LBL_Heap=Heap
 LBL_NA=N/A
-LBL_Perm=Perm
+LBL_PermGen=PermGen
 LBL_Meta=Metaspace
