Bugfix #571, fixed missing resource string, improved wording.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3266 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -65,6 +65,8 @@ MSG_Class_Sharing_Link=<a href="https://visualvm.java.net/troubleshooting.html#x
 
 MSG_Class_Sharing_Nolink=<nobr>https://visualvm.java.net/troubleshooting.html#xshare</nobr>
 
+MSG_Incorrect_CPU_settings=Provided CPU settings are invalid.
+
 LBL_Profile=Profile\:
 LBL_Sample=Sample\:
 
