--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -21,7 +21,8 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracer.dtrace}:\
     ${project.com.sun.tools.visualvm.modules.tracer.javafx}:\
     ${project.com.sun.tools.visualvm.modules.tracer.swing}:\
-    ${project.com.sun.tools.visualvm.modules.tracer.collections}
+    ${project.com.sun.tools.visualvm.modules.tracer.collections}:\
+    ${project.com.sun.tools.visualvm.profiler.startup}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
@@ -45,6 +46,7 @@ project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 project.com.sun.tools.visualvm.modules.tracer=tracer
 project.com.sun.tools.visualvm.modules.tracer.jvmstat=tracerjvmstat
 project.com.sun.tools.visualvm.modules.tracer.monitor=tracermonitor
+project.com.sun.tools.visualvm.profiler.startup=startupprofiler
 
 branding.token=visualvm
 branding.dir=none
