--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -98,3 +98,23 @@ LBL_Settings=Settings
 LBL_Cpu_settings=CPU settings
 
 LBL_Memory_settings=Memory settings
+
+CAP_Calibrate_java=Calibrate Java
+# HTML-formatted, Please select Java 7 64bit binary:
+MSG_Calibration_required=<b>Java platform calibration required.</b><br><br>The profiler needs to calibrate the Java platform used for profiling.<br>Please select {0} {1} binary:
+CAP_Select_java_binary=Select Java Binary
+# Selected binary is not Java 7 64bit.
+MSG_Incorrect_java_binary=Selected binary is not {0} {1}.
+# Java Binary (java.exe)
+LBL_Java_file_filter=Java Binary ({0})
+BTN_Browse=&Browse
+BTN_Ok=OK
+
+STR_Externaly_started_app=externally started application
+# Java 7
+STR_Java_platform_name=Java {0}
+# 64bit
+STR_Java_arch_name={0}bit
+CAP_Warning=Warning
+# HTML-formatted
+MSG_StartedTooSoon=<html><b>Profiled application started too soon.</b><br><br>Please terminate the profiled application and<br>restart it after closing this dialog.</html>
