--- a/visualvm/nbproject/genfiles.properties
+++ b/visualvm/nbproject/genfiles.properties
@@ -6,3 +6,6 @@ build.xml.stylesheet.CRC32=531c622b
 nbproject/build-impl.xml.data.CRC32=15cfc12a
 nbproject/build-impl.xml.script.CRC32=3038af2e
 nbproject/build-impl.xml.stylesheet.CRC32=2f5f2db8@1.28.0.7
+nbproject/platform.xml.data.CRC32=15cfc12a
+nbproject/platform.xml.script.CRC32=db9e1f43
+nbproject/platform.xml.stylesheet.CRC32=df8ac4dd@2.56.1
