--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
@@ -42,3 +42,10 @@ NetworkOptionsPanel_AuthCheckbox=Proxy re&quires authentication\:
 NetworkOptionsPanel_Username=Us&ername\:
 NetworkOptionsPanel_Password=Pass&word\:
 NetworkOptionsPanel_Password_Description=Proxy password
+
+NetworkOptionsModel_PortError=Port number must be an integer value.
+
+# ProxySettings
+ProxySettings.password.description=Proxy password
+#NOI18N
+StaticNonProxyHosts=localhost|127.0.0.1
