--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -13,6 +13,8 @@ disabled.modules=\
     org.netbeans.libs.jsr223,\
     org.netbeans.libs.junit4,\
     org.netbeans.libs.osgi,\
+    org.netbeans.libs.testng,\
+    org.netbeans.lib.uihandler,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.debugger.jpda.heapwalk,\
     org.netbeans.modules.favorites,\
@@ -41,6 +43,7 @@ disabled.modules=\
     org.netbeans.modules.profiler.projectsupport,\
     org.netbeans.modules.profiler.stp,\
     org.netbeans.modules.spi.actions,\
+    org.netbeans.modules.uihandler,\
     org.openide.compat,\
     org.openide.execution,\
     org.openide.options,\
