--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -41,6 +41,8 @@ MSG_refreshing=refreshing...
 
 MSG_calibration_progress=calibration in progress...
 
+MSG_calibration=<html><br><b>Profiler calibration will be performed.</b><br><br>The profiler will perform initial calibration of the target Java platform.<br>You can manage the calibration data using Tools | Options | Profiling.</html>
+
 MSG_profiling_running_methods=profiling running ({0} methods instrumented)
 
 MSG_profiling_running_classes_1=profiling running ({0} classes instrumented, tracking each object)
@@ -100,11 +102,15 @@ LBL_Cpu_settings=CPU settings
 LBL_Memory_settings=Memory settings
 
 CAP_Calibrate_java=Calibrate Java
-# HTML-formatted, Please select Java 7 64bit binary:
-MSG_Calibration_required=<b>Java platform calibration required.</b><br><br>The profiler needs to calibrate the Java platform used for profiling.<br>Please select {0} {1} binary:
+# Please select Java 7 64bit binary:
+MSG_Calibration_required_arch=The profiler will calibrate the Java platform to be used for profiling.<br>Please select {0} {1} binary:
+# Please select Java 7 binary:
+MSG_Calibration_required_noarch=The profiler will calibrate the Java platform to be used for profiling.<br>Please select {0} binary:
 CAP_Select_java_binary=Select Java Binary
 # Selected binary is not Java 7 64bit.
-MSG_Incorrect_java_binary=Selected binary is not {0} {1}.
+MSG_Incorrect_java_binary_arch=Selected binary is not {0} {1}.
+# Selected binary is not Java 7.
+MSG_Incorrect_java_binary_noarch=Selected binary is not {0}.
 # Java Binary (java.exe)
 LBL_Java_file_filter=Java Binary ({0})
 BTN_Browse=&Browse
