--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
@@ -41,6 +41,8 @@ LBL_Use_security_credentials=Us&e security credentials
 
 LBL_Save_security_credentials=&Save security credentials
 
+LBL_Insecure_connection=Do &not require SSL connection
+
 LBL_Default_jmx_connection_name=Default Connection
 
 LBL_Default_jmx_connection_descr=Customizable JMX url and credentials
