--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -65,6 +65,7 @@ DESCR_ConnectionProperties=Connection used to discover and manage the applicatio
 MSG_ConnectionProperties=The application is managed by a JMX connection. See the JMX Connection tab for details.
 
 Title_Insecure_SSL=Secure Connection Failed
-MSG_Insecure_SSL=<html><b>The connection to {0}<br>could not be made using SSL.</b><br><br>\
-                 Would you like to try it without SSL?<br>\
-                 (Username and password will be sent in plain text)<html>
+MSG_Insecure_SSL=<html><b>The connection to {0}<br>could not be made using SSL. Retry without SSL?</b><br><br>\
+                 Note that username and password will be sent in plain text.<html>
+
+Retry_Insecure_SSL=&Do not require SSL for this connection
