--- a/visualvm/charts/src/com/sun/tools/visualvm/charts/xy/Bundle.properties
+++ b/visualvm/charts/src/com/sun/tools/visualvm/charts/xy/Bundle.properties
@@ -22,6 +22,11 @@
 # or visit www.oracle.com if you need additional information or have any
 # questions.
 
+SimpleXYChart_ZoomInString=Zoom In (Mouse Wheel)
+SimpleXYChart_ZoomOutString=Zoom Out (Mouse Wheel)
+SimpleXYChart_FixedScaleString=Fixed Scale (Mouse Wheel Click)
+SimpleXYChart_ScaleToFitString=Scale To Fit (Mouse Wheel Click)
+
 # HTML-formatted message format for chart details items, example: 'Item1: 123'
 SimpleXYChartUtils_DetailsItemFormat=<b>{0}: </b>{1}
 
